main.css
html, body {
    height: 100%;
    margin: 0;
    color: white;
    font-family: 'Special Elite';
}

header {
    background-color: #222222;
    width: 100%;
    display: flex;
    justify-content: center;
    border-bottom: 2px solid black;
}

header h1, header p {
    margin: 5px 0 5px 0;
}

h3 {
    margin: 10px 0 20px 0;
}

.header {
    display: flex;
    justify-content: space-between;
}

.title {

    width: 250px;
}

.logo {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    align-self: center;
}

main {
    /*background-image: url('images/weights.jpeg');*/
    background-color: #23395B;
    background-size: cover;
    background-position: center;
    height: 100%;
    border-right: 3px solid #1A2A43;
    border-left: 3px solid #1A2A43;
}

.searchForm {
    width: 50%;
    min-width: 300px;
    padding-top: 20px;
    text-align: center;
}

input[type="text"] {
    border-radius: 3px;
    border: 2px solid #97D8B2;
    line-height: 32px;
    font-size: 14px;
    width: 100%;
    /*padding: 15px;*/
}

input[type="text"]:focus {
    border: 2px solid #FF0000;

}

input[type="submit"] {
    border-radius: 3px;
    border-bottom: 2px solid #BA0000;
    border-right: 2px solid #BA0000;
    border-top: none;
    border-left: none;
    padding-top: 5px;
    margin-top: 20px;
    background-color: #FF0000;
    color: white;
    line-height: 24px;
    width: 25%;
    font-weight: bold;
}

.js-gymResults {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #53599A;
    height: 300px;
    border: 4px solid transparent;
    border-right: 4px solid #3D4171;
    border-bottom: 4px solid #3D4171;
    background-clip: padding-box;
    -moz-background-clip: padding;
    -webkit-background-clip: padding;
    box-shadow: 0 4px 8px 0 rgba(0,0,100,0.2);
    transition: 0.3s;
}

.js-gymResults:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,100,0.2);
}

.js-gymResults img {
    width: 100px;
    height: 100px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    border: 1px solid white;
}

.js-gymResults h3 {
    margin-bottom: 10px;
}

